<resources>
    <string name="app_name">Android Base</string>
    <string name="login">Login</string>
    <string name="email_hint">Email address</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="password_hint">Password</string>
    <string name="empty_error">Email and Password should not be empty</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_avatar">Choose Avatar</string>
    <string name="default_filename">filename.jpg</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <!--Error messages -->
    <string name="unknown_error">Unknown error</string>
    <string name="not_modified_error">304 Not Modified</string>
    <string name="bad_request_error">400 Bad Request</string>
    <string name="unauthorized_error">Unauthorized</string>
    <string name="forbidden_error">403 Forbidden</string>
    <string name="not_found_error">404 Not Found</string>
    <string name="method_not_allowed_error">405 Method Not Allowed</string>
    <string name="conflict_error">409 Conflict</string>
    <string name="server_error_error">500 Server Error</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="avatar">Avatar</string>

</resources>
